--- a/src/main/resources/templates/posts-update.mustache
+++ b/src/main/resources/templates/posts-update.mustache
@@ -2,16 +2,20 @@
 <div class="container-fluid px-1 py-5 mx-auto">
     <div class="row d-flex justify-content-center">
         <div class="col-xl-7 col-lg-8 col-md-9 col-11 text-center">
-            <h3>Product Registration</h3>
+            <h3>Product Modify</h3>
             <form>
                 <fieldset>
                     <div class="form-group">
                         <label for="productName" class="form-label mt-4">상품명</label>
-                        <input type="text" class="form-control text-center" id="title" placeholder="상품명을 기재해주세요.">
+                        <input type="text" class="form-control text-center" id="title" placeholder="상품명을 기재해주세요." value="{{post.title}}">
+                    </div>
+                    <div class="form-group">
+                        <label for="id" class="form-label mt-4">번호</label>
+                        <input type="text" class="form-control text-center" id="id" value="{{post.id}}" readonly>
                     </div>
                     <div class="form-group">
                         <label for="author" class="form-label mt-4">작성자</label>
-                        <input type="text" class="form-control text-center" id="author">
+                        <input type="text" class="form-control text-center" id="author" value="{{post.author}}" readonly>
                     </div>
                     <div class="form-group">
                         <label for="amount" class="form-label mt-4">금액입력</label>
@@ -31,7 +35,7 @@
 
                     <div class="form-group">
                         <label for="content" class="form-label mt-4">상품설명</label>
-                        <textarea class="form-control" id="content" rows="3"></textarea>
+                        <textarea class="form-control" id="content" rows="3" id="content">{{post.content}}</textarea>
                     </div>
                     <div class="form-group">
                         <label for="formFile" class="form-label mt-4">상품업로드</label>
@@ -54,7 +58,9 @@
 
                 </fieldset>
             </form>
-            <button type="submit" class="btn btn-danger disabled" id="btn-save">등록</button>
+            <a href="/" role="button" class="btn btn-secondary">취소</a>
+            <button type="button" class="btn btn-primary disabled" id="btn-update">저장</button>
+            <button type="button" class="btn btn-danger disabled" id="btn-delete">삭제</button>
         </div>
     </div>
 </div>
