--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,42 +1,43 @@
 {{>layout/header}}
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">WebService</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                        <!--로그인영역 -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container px-4 px-lg-5">
+        <a class="navbar-brand" href="#!">WebService</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse justify-content-start" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
+                <li class="nav-item" style="font-size: 15px; place-self: center;"><a class="dropdown-item" href="#">고객센터</a></li>
 
-                        <!--로그인했다면? -->
-                        {{#userName}}
-                        <li class="nav-item">{{userName}}</li>
-                        <li class="nav-item"><a class="dropdown-item" href="/logout">LOGOUT</a></li>
-                        {{/userName}}
+                <!--로그인영역 -->
+                <!--로그인했다면? -->
+                {{#userName}}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{userName}}</a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#!">마이페이지</a></li>
+                            <li><hr class="dropdown-divider" /></li>
 
-                        <!--안했다면 ? -->
-                        {{^userName}}
-                            <li class="nav-item"><a class="dropdown-item" href="/oauth2/authorization/google">LOGIN</a></li>
-                        {{/userName}}
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">마이페이지</a></li>
-                                <li><hr class="dropdown-divider" /></li>
+                            <form class="d-flex-row-reverse">
+                                <li><a class="dropdown-item" href="/posts/save">판매등록</a></li>
+                            </form>
 
-                                <form class="d-flex-row-reverse">
-                                    <li><a class="dropdown-item" href="/posts/save">판매등록</a></li>
-                                </form>
+                            <li><a class="dropdown-item" href="/logout">로그아웃</a></li>
+                        </ul>
+                    </li>
+                {{/userName}}
 
-                                <li><a class="dropdown-item" href="#!">고객센터</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- Header-->
+                <!--안했다면 ? -->
+                {{^userName}}
+                    <li class="nav-item" style="font-size: 15px; place-self: center;"><a class="dropdown-item" href="/oauth2/authorization/google">로그인</a></li>
+                {{/userName}}
+
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!-- Header-->
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
