change db settings

--- a/src/main/resources/templates/posts-save.mustache
+++ b/src/main/resources/templates/posts-save.mustache
@@ -54,7 +54,7 @@
 
                 </fieldset>
             </form>
-            <button type="submit" class="btn btn-danger disabled" id="btn-save">등록</button>
+            <button type="submit" class="btn btn-danger" id="btn-save">등록</button>
         </div>
     </div>
 </div>
