--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,9 @@
 <!-- content -->
 <body layout:fragment="content">
 
+<ul>
+  <li><a class="dropdown-item" th:href="@{'/join'}" >회원가입</a></li>
+</ul>
 <!--목록 출력 영역-->
 <table class="table table-hover table-bordered">
 
